# goit-pythonweb-hw-10

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.ps1
alembic/: env.py
alembic/versions/: 1ba499fbb2ad_add_confirmed_field_to_user_model.py  3b7e96bdaf0c_initial_migration.py  7b8ff7436f73_add_user_model_and_user_id_field.py
src/: main.py  schemas.py  seeds.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: verify_email.html
